# bundestagswahl

./: bundestagswahl.ipynb  pyproject.toml
