[tool.poetry]
name = "bundestagswahl"
version = "0.1.0"
description = ""
authors = ["Markus Kaiser <markus.kaiser@tum.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
jupyterlab = "^3.1.6"
plotly = "^5.2.1"
seaborn = "^0.11.1"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
nbformat = "^5.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
